# http-prep

./: README.md  pyproject.toml  setup.py
src/httpprep/: Headers.py  OverloadDict.py  URL.py  __init__.py
src/web_fetch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/webfetch/: MultiDict.py  OverloadDict.py  __init__.py  fetcher.py
tests/: test.py
webfetch/: LICENSE.txt  __init__.py  fetcher.py
